# openni-skeleton-export

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  logskel.cpp  main.cpp  skeletonexport_nogui.cpp  test.sh
common/: CMakeLists.txt  io.cpp
common/include/: io.h
examples/: README.md  labelbones.py  normalshade.py
skeletonexport/: main.cpp
src/: SceneDrawer.cpp  arghelpers.h  io.cpp  io.h  main.cpp  main_nogui.cpp  mainloop.cpp  mainloop.h  opengles.cpp
